-Fixed a spacing issue

--- a/builtins/file-browser/templates/file-browser.css
+++ b/builtins/file-browser/templates/file-browser.css
@@ -129,6 +129,7 @@
     width: 80px;
     height: 16px;
     margin-left: 5px;
+    margin-bottom: 0px;
 }
 
 .fb-pane.fb-pane-main .fb-files .fb-file:hover {
